--- a/Backoffice/Components/Liquidity/Portfolio/Components/LeTradesComponent.razor
+++ b/Backoffice/Components/Liquidity/Portfolio/Components/LeTradesComponent.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components
 @using Service.Liquidity.Engine.Domain.Models.Portfolio
 @using Service.Liquidity.Reports.Grpc
+@using Service.Liquidity.Reports.Grpc.Models
 
 @inject ILiquidityReportService LiquidityReportService
 
