--- a/Backoffice/Components/Liquidity/Portfolio/Components/ShortClosePositionComponent.razor
+++ b/Backoffice/Components/Liquidity/Portfolio/Components/ShortClosePositionComponent.razor
@@ -2,6 +2,7 @@
 @using Service.Liquidity.Engine.Domain.Models.Portfolio
 @using Service.Liquidity.Engine.Grpc
 @using MyJetWallet.Domain.Orders
+@using Service.Liquidity.Reports.Grpc.Models
 
 @inject ILiquidityReportService LiquidityReportService
 
