Added page with base prices

--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -39,4 +39,4 @@
 @using Backoffice.Components.SmsSender.Templates
 @using Backoffice.Components.Notifications.History
 @using Backoffice.Components.Notifications.Templates
-
+@using Backoffice.Components.Prices
