--- a/Backoffice/Pages/CashOperations.razor
+++ b/Backoffice/Pages/CashOperations.razor
@@ -6,6 +6,8 @@
 <ul class="nav nav-tabs nav-pills">
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.Deposits)" aria-current="page" @onclick="SetDeposits" >Deposits</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.Withdrawals)" aria-current="page" @onclick="SetWithdrawals" >Withdrawals</button>
     </li>
 </ul>
