update set balance UI in asset portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -171,7 +171,7 @@
                     </select>
                 </tr>
                 <tr>
-                    <td>Balance difference</td>
+                    <td>New Balance</td>
                     <td><input type="number" class="form-control" @bind=BalanceDiff /></td>
                 </tr>
                 <tr>
