--- a/Backoffice/Components/Liquidity/AssetPortfolio/LeChangeBalanceHistoryComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LeChangeBalanceHistoryComponent.razor
@@ -14,7 +14,8 @@
         <th>UpdateDate</th>
         <th>WalletName</th>
         <th>Asset</th>
-        <th>VolumeDifference</th>
+        <th>New Balance</th>
+        <th>Balance Before Update</th>
         <th>Comment</th>
         <th>User</th>
     </tr>
@@ -28,6 +29,7 @@
             <td>@history.WalletName</td>
             <td>@history.Asset</td>
             <td>@history.VolumeDifference</td>
+            <td>@history.BalanceBeforeUpdate</td>
             <td>@history.Comment</td>
             <td>@history.User</td>
         </tr>
