--- a/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
+++ b/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
@@ -5,7 +5,7 @@
 @inject IToaster ToastService;
 @inject IBitgoWithdrawalService _bitgoWithdrawalService
 
-<h3>WithdrawalsComponent</h3>
+<h3>Withdrawals</h3>
 
 <ul class="nav">
     @if ((_withdrawals)?.Any() == true)
