--- a/Backoffice/Components/CashOperations/Deposits/DepositsComponent.razor
+++ b/Backoffice/Components/CashOperations/Deposits/DepositsComponent.razor
@@ -5,7 +5,7 @@
 @inject IToaster ToastService;
 @inject IBitgoDepositService _bitgoDepositService
 
-<h3>DepositsComponent</h3>
+<h3>Deposits</h3>
 
 <ul class="nav">
     @if ((_deposits)?.Any() == true)
