- update fees settings; - remove default broker;

--- a/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialogEdit.razor
+++ b/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialogEdit.razor
@@ -99,10 +99,7 @@
     {
         base.OnInitialized();
         if (IsCreate)
-            Item = new BitgoAssetMapEntity()
-            {
-                BrokerId = "jetwallet",
-            };
+            Item = new BitgoAssetMapEntity();
     }
 
 }
