add new fields to external markets

--- a/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialog.razor
+++ b/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialog.razor
@@ -13,6 +13,9 @@
                 <tr><td>Volume Accuracy</td><td class="float-left">@Item.VolumeAccuracy</td></tr>
                 <tr><td>Min Volume</td><td class="float-left">@Item.MinVolume</td></tr>
                 <tr><td>Levels</td><td class="float-left">@Item.Levels</td></tr>
+                <tr><td>Associate Instrument</td><td class="float-left">@Item.AssociateInstrument</td></tr>
+                <tr><td>Associate Base Asset</td><td class="float-left">@Item.AssociateBaseAsset</td></tr>
+                <tr><td>Associate Quote Asset</td><td class="float-left">@Item.AssociateQuoteAsset</td></tr>
             </table>
         </td>
     </tr>
