--- a/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialogEdit.razor
+++ b/Backoffice/Components/ExternalMarkets/ExternalMarketsDetailsDialogEdit.razor
@@ -63,6 +63,24 @@
                             <input type="text" class="form-control" @bind="Item.Levels"/>
                         </td>
                     </tr>
+                    <tr>
+                        <td>Associate Instrument</td>
+                        <td class="float-left">
+                            <input type="text" class="form-control" @bind="Item.AssociateInstrument"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Associate Base Asset</td>
+                        <td class="float-left">
+                            <input type="text" class="form-control" @bind="Item.AssociateBaseAsset"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Associate Quote Asset</td>
+                        <td class="float-left">
+                            <input type="text" class="form-control" @bind="Item.AssociateQuoteAsset"/>
+                        </td>
+                    </tr>
                 </table>
             </td>
 
