added page for market info and cmc api keys

--- a/Backoffice/Components/SmsSender/Templates/TemplatesComponent.razor
+++ b/Backoffice/Components/SmsSender/Templates/TemplatesComponent.razor
@@ -8,7 +8,7 @@
 @inject ISmsTemplateService _smsTemplateService
 @inject IToaster _toastService
 
-=<h3>Sms Templates</h3>
+<h3>Sms Templates</h3>
 
 
 <table class="table" style="width: auto">
