--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -40,3 +40,5 @@
 @using Backoffice.Components.Notifications.History
 @using Backoffice.Components.Notifications.Templates
 @using Backoffice.Components.Prices
+@using Backoffice.Components.MarketInfo
+@using Backoffice.Components.MarketInfo.ApiKeys
